--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
 <body>
   <!-- Trang đăng nhập -->
   <div class="container" id="loginPage">
-    <h2>Đăng nhập / Đăng ký</h2>
+    <h2>Đăng nhập</h2>
     <input id="username" placeholder="Tên đăng nhập">
     <input id="password" type="password" placeholder="Mật khẩu">
-    <button onclick="register()">Đăng ký</button>
     <button onclick="login()">Đăng nhập</button>
     <p id="msg" style="color:red"></p>
   </div>
@@ -60,11 +59,12 @@
   <div class="container hidden" id="quizPage">
     <h2>Bài trắc nghiệm</h2>
     <div id="questionContainer"></div>
-    <button onclick="submitQuiz()">Nộp bài</button>
+    <button id="submitBtn" onclick="submitQuiz()">Nộp bài</button>
+    <button id="resetBtn" class="hidden" onclick="resetQuiz()">Làm lại</button>
     <div id="result" class="result-box hidden"></div>
     <hr>
     <button onclick="logout()">Đăng xuất</button>
-    <button onclick="showAdmin()">Quản lý câu hỏi</button>
+    <button id="adminBtn" class="hidden" onclick="showAdmin()">Quản lý câu hỏi</button>
   </div>
 
   <!-- Trang quản lý câu hỏi -->
@@ -83,9 +83,13 @@
   </div>
 
   <script>
-    // ===== DỮ LIỆU NGƯỜI DÙNG & CÂU HỎI =====
-    const users = JSON.parse(localStorage.getItem("users") || "{}");
+    // ===== DỮ LIỆU =====
+    const adminUser = { username: "admin", password: "1234" };
+    const guestUser = { username: "guest", password: "1234" };
+
     const questions = JSON.parse(localStorage.getItem("questions") || "[]");
+    const results = JSON.parse(localStorage.getItem("results") || "{}");
+
     let currentUser = localStorage.getItem("currentUser");
 
     const loginPage = document.getElementById("loginPage");
@@ -93,10 +97,13 @@
     const adminPage = document.getElementById("adminPage");
     const msg = document.getElementById("msg");
     const resultBox = document.getElementById("result");
+    const submitBtn = document.getElementById("submitBtn");
+    const resetBtn = document.getElementById("resetBtn");
+    const adminBtn = document.getElementById("adminBtn");
 
     function saveData() {
-      localStorage.setItem("users", JSON.stringify(users));
       localStorage.setItem("questions", JSON.stringify(questions));
+      localStorage.setItem("results", JSON.stringify(results));
     }
 
     function showPage(page) {
@@ -104,31 +111,21 @@
       page.classList.remove("hidden");
     }
 
-    if (currentUser) {
-      showPage(quizPage);
-      renderQuiz();
-    }
-
-    // ===== ĐĂNG KÝ / ĐĂNG NHẬP =====
-    function register() {
-      const u = username.value.trim();
-      const p = password.value.trim();
-      if (!u || !p) return msg.textContent = "Vui lòng nhập đủ thông tin";
-      if (users[u]) return msg.textContent = "Tài khoản đã tồn tại";
-      users[u] = p; saveData();
-      msg.style.color = "green";
-      msg.textContent = "Đăng ký thành công! Hãy đăng nhập.";
-    }
-
+    // ===== ĐĂNG NHẬP =====
     function login() {
       const u = username.value.trim();
       const p = password.value.trim();
-      if (users[u] === p) {
+
+      if ((u === adminUser.username && p === adminUser.password) ||
+          (u === guestUser.username && p === guestUser.password)) {
         currentUser = u;
         localStorage.setItem("currentUser", u);
         showPage(quizPage);
         renderQuiz();
-      } else msg.textContent = "Sai tài khoản hoặc mật khẩu";
+        if (u === "admin") adminBtn.classList.remove("hidden");
+      } else {
+        msg.textContent = "Sai tài khoản hoặc mật khẩu!";
+      }
     }
 
     function logout() {
@@ -137,15 +134,22 @@
       showPage(loginPage);
     }
 
-    // ===== HIỂN THỊ & NỘP BÀI TRẮC NGHIỆM =====
+    // ===== TRẮC NGHIỆM =====
     function renderQuiz() {
       const c = document.getElementById("questionContainer");
+      c.innerHTML = "";
       if (questions.length === 0) {
         c.innerHTML = "<p>Chưa có câu hỏi nào. Vào phần quản lý để thêm!</p>";
         return;
       }
-      c.innerHTML = "";
-      resultBox.classList.add("hidden");
+
+      const userResult = results[currentUser];
+      if (userResult?.submitted) {
+        showResult(userResult.correct, questions.length);
+        disableQuiz();
+        return;
+      }
+
       questions.forEach((q, i) => {
         const div = document.createElement("div");
         div.innerHTML = `
@@ -164,24 +168,49 @@
         const selected = document.querySelector(`input[name='q${i}']:checked`);
         if (selected && selected.value === q.correct) correctCount++;
       });
-      const total = questions.length;
-      resultBox.textContent = `Bạn trả lời đúng ${correctCount}/${total} câu (${Math.round(correctCount/total*100)}%)`;
+      results[currentUser] = { correct: correctCount, submitted: true };
+      saveData();
+      showResult(correctCount, questions.length);
+      disableQuiz();
+    }
+
+    function showResult(score, total) {
+      resultBox.textContent = `Bạn trả lời đúng ${score}/${total} câu (${Math.round(score / total * 100)}%)`;
       resultBox.classList.remove("hidden");
     }
 
-    // ===== QUẢN LÝ CÂU HỎI =====
+    function disableQuiz() {
+      document.querySelectorAll("input[type=radio]").forEach(i => i.disabled = true);
+      submitBtn.classList.add("hidden");
+      resetBtn.classList.remove("hidden");
+    }
+
+    function resetQuiz() {
+      delete results[currentUser];
+      saveData();
+      resultBox.classList.add("hidden");
+      submitBtn.classList.remove("hidden");
+      resetBtn.classList.add("hidden");
+      renderQuiz();
+    }
+
+    // ===== ADMIN =====
     function showAdmin() {
+      if (currentUser !== "admin") {
+        alert("Chỉ admin mới được truy cập!");
+        return;
+      }
       showPage(adminPage);
       renderAdmin();
     }
 
     function addQuestion() {
       const q = {
-        text: questionText.value,
-        A: answerA.value,
-        B: answerB.value,
-        C: answerC.value,
-        correct: correct.value.toUpperCase()
+        text: questionText.value.trim(),
+        A: answerA.value.trim(),
+        B: answerB.value.trim(),
+        C: answerC.value.trim(),
+        correct: correct.value.trim().toUpperCase()
       };
       if (!q.text || !q.correct) return alert("Nhập đầy đủ thông tin!");
       questions.push(q);
@@ -217,6 +246,15 @@
       showPage(quizPage);
       renderQuiz();
     }
+
+    // ===== TỰ ĐỘNG KHÔI PHỤC PHIÊN =====
+    window.onload = function() {
+      if (currentUser) {
+        showPage(quizPage);
+        renderQuiz();
+        if (currentUser === "admin") adminBtn.classList.remove("hidden");
+      }
+    };
   </script>
 </body>
 </html>
